# daily-fast_iostream

./: CMakeLists.txt
include/daily/fast_iostream/: fast_istream.h  fast_locale.h
include/daily/fast_iostream/detail/: format.h
include/fast_iostream/: fast_ostream.h
src/: fast_locale.cpp
